...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C7n-RG-ksx" userLabel="Like Button">
                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like_button"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="7TM-A7-pwd"/>
                                                        <constraint firstAttribute="width" constant="44" id="Qrw-cM-VNR"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="Active"/>
...
            <objects>
                <viewController storyboardIdentifier="AuthViewController" id="32x-Xt-HAl" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="h6J-fC-sxq">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo_of_Unsplash" translatesAutoresizingMaskIntoConstraints="NO" id="HkO-jX-1PU">
                                <rect key="frame" x="177" y="418" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="aFZ-5O-PLn"/>
                                    <constraint firstAttribute="width" constant="60" id="g0H-Gn-dKF"/>
                                </constraints>
                            </imageView>
...
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="aXX-2h-ngB"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <backgroundConfiguration key="background">
                                        <color key="backgroundColor" name="YP White"/>
                                    </backgroundConfiguration>
                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
...
                                <rect key="frame" x="9" y="9" width="48" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="UWj-nm-qkQ"/>
                                    <constraint firstAttribute="height" constant="48" id="rg5-Iq-5ij"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
                                <connections>
                                    <action selector="didTapBackButton:" destination="mgL-KY-8DK" eventType="touchUpInside" id="U7f-rH-vx2"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="DWc-pE-pm1"/>
...
